[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Overlay.gd" type="Script" id=1]
[ext_resource path="res://Battle/StatBAr.shader" type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/modulate = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 5.1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.611765, 0.611765, 0.611765, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Overlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="Screen"]
margin_right = 800.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Background" type="ColorRect" parent="Screen/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0196078, 0.145098, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Followers" type="Control" parent="Screen/Top"]
margin_left = 416.0
margin_top = 16.0
margin_right = 528.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Screen/Top/Followers"]
margin_left = 8.0
margin_top = 8.0
margin_right = 73.0
margin_bottom = 22.0
text = "Followers:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammount" type="Label" parent="Screen/Top/Followers"]
margin_left = 80.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 22.0
text = "23"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item1" type="Control" parent="Screen/Top"]
margin_left = 32.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Screen/Top/Item1"]
margin_left = 8.0
margin_top = 8.0
margin_right = 73.0
margin_bottom = 22.0
text = "Equipment:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammount" type="Label" parent="Screen/Top/Item1"]
margin_left = 96.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item2" type="Control" parent="Screen/Top"]
margin_left = 192.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Screen/Top/Item2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 73.0
margin_bottom = 22.0
text = "Decoration:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammount" type="Label" parent="Screen/Top/Item2"]
margin_left = 96.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 22.0
text = "0"

[node name="Level" type="Control" parent="Screen/Top"]
margin_left = 536.0
margin_top = 16.0
margin_right = 648.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Screen/Top/Level"]
margin_left = 8.0
margin_top = 8.0
margin_right = 73.0
margin_bottom = 22.0
text = "Dungeon level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammount" type="Label" parent="Screen/Top/Level"]
margin_left = 112.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 22.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="MarginContainer" parent="Screen"]
margin_top = 52.0
margin_right = 800.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="Control" parent="Screen"]
margin_top = 539.0
margin_right = 800.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 60 )

[node name="Options" type="Button" parent="Screen/Bottom"]
margin_left = 688.0
margin_top = 5.0
margin_right = 792.0
margin_bottom = 45.0
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Screen/Bottom"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 1 )
margin_left = 16.0
margin_top = 5.0
margin_right = 552.0
margin_bottom = 45.0
value = 60.0
allow_lesser = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="AnimationPlayer" parent="Screen/Bottom/HealthBar"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="Debug" type="Button" parent="."]
visible = false
margin_left = 160.0
margin_top = 216.0
margin_right = 304.0
margin_bottom = 288.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug2" type="Button" parent="."]
visible = false
margin_left = 360.0
margin_top = 208.0
margin_right = 504.0
margin_bottom = 280.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Screen/Bottom/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="Debug2" to="." method="_on_Debug2_pressed"]
